fixed carousel and home component overflow

--- a/src/components/Projects/carousel.css
+++ b/src/components/Projects/carousel.css
@@ -15,7 +15,7 @@
     margin: 0;
     padding: 5px;
     border-radius: 50%;
-    z-index: 1;
+    z-index: 2;
     position: absolute;
 }
 
@@ -89,15 +89,19 @@
     display: flex;
     -ms-overflow-style: none;  /* hide scrollbar in IE and Edge */
     scrollbar-width: none;  /* hide scrollbar in Firefox */
+    margin-left: -12vw;
 }
 
 .card-container {
     position: relative;
     flex-shrink: 0;
-    width: calc(70vw / 3);
+    /* width: calc(70vw / 3); */
+    width: 30vw;
     height: 70vh;
     margin-top: 15vh;
     margin-bottom: 15vh;
+    margin-left: 1vw;
+    margin-right: 1vw;
 }
 
 .carousel-image {
@@ -109,4 +113,23 @@
     aspect-ratio: 1 / 1;
     width: 100%;
     height: 100%;
+}
+
+.prev-slides {
+    background-image: linear-gradient(to right, rgba(255,255,255,1), rgba(255,255,25,0));
+    position : absolute;
+    z-index: 1;
+    height: 80vh;
+    width: 10vw;
+    bottom: 10vh;
+}
+
+.next-slides {
+    background-image: linear-gradient(to left, rgba(255,255,255,1), rgba(255,255,255,0));
+    position : absolute;
+    z-index: 1;
+    height: 80vh;
+    width: 10vw;
+    top: 10vh;
+    right: 0vw;
 }
